# toasty-sandbox

./: .gitignore  eda_kicker.ipynb  requirements.txt
a-test-dummy/: config.py  requirements.txt
a-test-dummy/data/converted/: smart_sample.xlsx
a-test-dummy/data/raw/: README.md  shapefiles.dvc
a-test-dummy/data/raw/apd_csv/: .gitignore  apd_crime_2021_2024.csv.dvc
a-test-dummy/data/raw/apd_geojson/: .gitignore  apd_crime_2021_2024.geojson.dvc
a-test-dummy/notebooks/: test_dummy.ipynb
a-test-dummy/scripts/prep/: eda_kickstart.py
a-test-dummy/tools/: check_eda_env.py  convert_me.py  rename_raw_data.py
gamma_grounds/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
gamma_grounds/docs/: mkdocs.yml
gamma_grounds/docs/dirty_docs/: checks_balances.md
gamma_grounds/docs/docs/: index.md
gamma_grounds/dsc_project/: __init__.py  dataset.py  features.py  plots.py
gamma_grounds/dsc_project/config/: constants.py  paths.py  settings.py
gamma_grounds/dsc_project/modeling/: predict.py  train.py
gamma_grounds/tools/: tool_guide.py
gamma_grounds/tools/00_startup/: check_eda_env.py
gamma_grounds/tools/01_clean_tools/weatherboy/: atlanta_daily_weather.csv  atlanta_hourly_weather.csv  open_weather.py
gamma_grounds/tools/02_eda_tools/: check_zero.py  eda_data_qual.py  eda_starter.py
gamma_grounds/tools/05_eval_tools/: mase.py  rolling_origin_cv.py
tools/: eda_crime_analysis.py  eda_feature_engineering.py  eda_function_guide.py
