[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsc_project"
version = "0.0.1"
description = "Gamma Testing of the new Wrangling, EDA, and Modeling for our DSC Capstone."
authors = [
  { name = "DJ SD" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["dsc_project"]
include = ["pyproject.toml", "dsc_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dsc_project"]
force-sort-within-sections = true

